--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Prerequisites
+*.d
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-# testing
-/coverage
+# Precompiled Headers
+*.gch
+*.pch
 
-# next.js
-/.next/
-/out/
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-# production
-/build
-/build-server
-/temp
+# Fortran module files
+*.mod
+*.smod
 
-# misc
-.DS_Store
-*.pem
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Executables
+*.exe
+*.out
+*.app
 
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+.vscode
